--- a/src/App.css
+++ b/src/App.css
@@ -1065,6 +1065,7 @@ textarea:focus-visible {
 .ai-section {
   width: 100%;
   font-family: 'Inter', sans-serif;
+  background-color: #0a0f1e;
 }
 
 .ai-ctas {
@@ -1093,6 +1094,8 @@ textarea:focus-visible {
   margin: 0 auto;
   padding: 25px 16px 10px;
   background: url('/AI.png') center top/contain no-repeat;
+    background-color: #0a0f1e;
+    /* border: 1px solid #0a0f1e; */
 }
 
 .ai-container::before {
@@ -1332,7 +1335,7 @@ textarea:focus-visible {
 
 .ai-container {
   position: relative;
-  width: 95%;
+  /* width: 95%; */
   height: 350px;
   display: flex;
   justify-content: space-between;
@@ -1340,6 +1343,7 @@ textarea:focus-visible {
   align-items: center;
   /* margin: 0; */
   /* padding: 0; */
+  background-color: #0a0f1e;
 
 }
 
@@ -1531,13 +1535,14 @@ textarea:focus-visible {
 
 /* Testimonials section */
 .testimonials-section {
-  padding: 30px 24px 100px 24px;
+  padding: 30px 32px 100px 32px;
   text-align: center;
   position: relative;
   overflow: hidden;
   /* apply upper-section color/overlay to this lower section */
-  background:
-    linear-gradient(180deg, rgba(11, 17, 19, 0) 0%, rgba(14, 26, 32, 0.4) 100%);
+  /* background:
+    linear-gradient(180deg, rgba(11, 17, 19, 0) 0%, rgba(14, 26, 32, 0.4) 100%); */
+  background-color: #0a0f1e;
   background-blend-mode: screen, normal;
   z-index: 0;
 }
@@ -1552,7 +1557,7 @@ textarea:focus-visible {
 }
 
 .testimonials-container {
-  max-width: 1200px;
+  max-width: 1260px;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
@@ -2731,7 +2736,7 @@ textarea:focus-visible {
 
 /* Blog Values */
 .blog-values {
-  padding: 80px 20px 80px 20px;
+  padding: 80px 30px 80px 30px;
   text-align: center;
   background: #0d1220;
 }
@@ -3990,7 +3995,7 @@ textarea:focus-visible {
   align-items: flex-start;
   justify-content: center;
   position: relative;
-  /* box-shadow: 0 6px 24px rgba(124,77,240,0.18) inset; */
+  box-shadow: 0 6px 24px rgba(124,77,240,0.18) inset;
   animation: si-bounce 3.6s ease-in-out infinite;
 
 }
@@ -4003,7 +4008,7 @@ textarea:focus-visible {
   bottom: -12px;
   height: 18px;
   border-radius: 999px;
-  background: radial-gradient(ellipse at center, #583ea1, 70%);
+  /* background: radial-gradient(ellipse at center, #583ea1, 70%); */
   pointer-events: none;
 }
 
