--- a/src/archival.css
+++ b/src/archival.css
@@ -114,7 +114,8 @@
 .archival-content {
   max-width: 1200px;
   margin: 68px auto 64px;
-  padding: 0 24px
+  padding: 0 24px;
+  background-color: #0a0f1e;
 }
 
 .archival-panel {
