--- a/src/components/Analytic.css
+++ b/src/components/Analytic.css
@@ -2,23 +2,25 @@
   position: relative;
   width: 100%;
   padding: 24px 0;
-  background:
+  /* background:
     radial-gradient(80% 80% at 70% 35%, rgba(139, 92, 246, 0.18) 0%, rgba(139, 92, 246, 0.06) 40%, rgba(13, 18, 32, 0) 60%),
-    radial-gradient(60% 60% at 78% 75%, rgba(212, 175, 55, 0.18) 0%, rgba(212, 175, 55, 0.06) 35%, rgba(13, 18, 32, 0) 60%);
+    radial-gradient(60% 60% at 78% 75%, rgba(212, 175, 55, 0.18) 0%, rgba(212, 175, 55, 0.06) 35%, rgba(13, 18, 32, 0) 60%); */
+
+    background-color: #0a0f1e;
 }
 
 .adash2-grid {
   display: grid;
-  grid-template-columns: 1.4fr 1.4fr;
+  grid-template-columns: 1.8fr 1.5fr;
   gap: 28px;
   align-items: start
 }
 
 .adash2-left{
   padding:200px 8px 10px 18px;
-  background:
+  /* background:
     radial-gradient(55% 55% at 28% 30%, rgba(139, 92, 246, 0.25) 0%, rgba(139, 92, 246, 0.10) 40%, rgba(13, 18, 32, 0) 70%),
-    radial-gradient(70% 70% at 35% 10%, rgba(0, 0, 0, 0.25) 0%, rgba(0,0,0,0.0) 60%);
+    radial-gradient(70% 70% at 35% 10%, rgba(0, 0, 0, 0.25) 0%, rgba(0,0,0,0.0) 60%); */
 }
 
 .ai-pill {
@@ -102,9 +104,9 @@
 .adash2-right{
   padding:30px;
   border: 0px solid rgba(139,92,246,0.12);
-  background:
+  /* background:
     radial-gradient(70% 70% at 65% 40%, rgba(139, 92, 246, 0.14) 20%, rgba(139, 92, 246, 0.05) 45%, rgba(13, 18, 32, 0) 70%),
-    radial-gradient(60% 60% at 85% 65%, rgba(212, 175, 55, 0.14) 20%, rgba(212, 175, 55, 0.05) 40%, rgba(13, 18, 32, 0) 70%);
+    radial-gradient(60% 60% at 85% 65%, rgba(212, 175, 55, 0.14) 20%, rgba(212, 175, 55, 0.05) 40%, rgba(13, 18, 32, 0) 70%); */
 }
 
 .adash2-kpis {
