--- a/src/components/Analytic.css
+++ b/src/components/Analytic.css
@@ -301,11 +301,13 @@
   }
 
   .adash2-kpis {
-    grid-template-columns: repeat(2, 1fr)
+    grid-template-columns: repeat(2, 1fr);
+    padding:0px;
   }
 
   .adash2-panels {
-    grid-template-columns: 1fr
+    grid-template-columns: 1fr;
+    padding:0px;
   }
 }
 
