--- a/src/App.css
+++ b/src/App.css
@@ -2727,7 +2727,7 @@ textarea:focus-visible {
   padding: 80px 30px 80px 30px;
   text-align: center;
   background: #0d1220;
-  width:100%;
+  /* width:100%; */
 }
 
 .values-header {
